changed redirect on login from sessions to profile

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -5,7 +5,7 @@
 .loginbutton {
     color: white;
     background-color:
-    #e4641a;
+    #ee773e;
     font-family: "Roboto";
     padding: 10px;
     font-size: larger;
