fixed charts, started new workout selection page

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,3 +1,8 @@
-.appContainer {
-    background-color: #E7E8E8;
+html, body, #root {
+    height: 100%;
 }
+.appContainer {
+    background-color: white;
+    height: 100%;
+}
+
